--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
                         <img src="assets/images/bamazon.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Bamazon</h5>
-                            <a href="https://github.com/Ryby1024/node-mysql" target="blank" class="btn btn-primary">Learn More</a>
+                            <a href="https://github.com/Ryby1024/node-mysql" target="blank"
+                                class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -203,8 +204,10 @@
                         <img src="assets/images/love.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Friend Finder</h5>
-                            <a href="https://github.com/Ryby1024/Friend-Finder" target="blank" class="btn btn-primary">Learn More</a>
-                            <a href="https://arcane-journey-78495.herokuapp.com/" target="blank" class="btn btn-primary">Try Me</a>
+                            <a href="https://github.com/Ryby1024/Friend-Finder" target="blank"
+                                class="btn btn-primary">Learn More</a>
+                            <a href="https://arcane-journey-78495.herokuapp.com/" target="blank"
+                                class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
@@ -213,29 +216,49 @@
 
         <div class="row">
             <div class="card-deck">
-                <div class="col-sm" data-aos="flip-left">
+                <div class="col-sm-4" data-aos="flip-left">
                     <div class="card text-center bg-secondary">
                         <img src="assets/images/burger.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Burger Order</h5>
-                            <a href="https://github.com/Ryby1024/burger" target="blank" class="btn btn-primary">Learn More</a>
-                            <a href="https://sleepy-spire-88994.herokuapp.com/" target="blank" class="btn btn-primary">Try Me</a>
+                            <a href="https://github.com/Ryby1024/burger" target="blank" class="btn btn-primary">Learn
+                                More</a>
+                            <a href="https://sleepy-spire-88994.herokuapp.com/" target="blank"
+                                class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="card-deck">
-                <div class="col-sm" data-aos="flip-left">
+
+
+                <div class="col-sm-4" data-aos="flip-left">
                     <div class="card text-center bg-secondary">
                         <img src="assets/images/gift.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">UnWrapped</h5>
-                            <a href="https://github.com/sengland88/unWrapped" target="blank" class="btn btn-primary">Learn More</a>
-                            <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank" class="btn btn-primary">Try Me</a>
+                            <a href="https://github.com/sengland88/unWrapped" target="blank"
+                                class="btn btn-primary">Learn More</a>
+                            <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank"
+                                class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
+
+
+                <div class="col-sm-4" data-aos="flip-left">
+                    <div class="card text-center bg-secondary">
+                        <img src="assets/images/paper.jpg" class="card-img-top" class="img-fluid" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">NY Times Scraper</h5>
+                            <a href="https://github.com/Ryby1024/scraped" target="blank" class="btn btn-primary">Learn
+                                More</a>
+                            <a href="https://evening-thicket-08549.herokuapp.com/" target="blank"
+                                class="btn btn-primary">Try Me</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
         </div>
         <div class="container">
             <div id="contact-me">
@@ -253,7 +276,8 @@
                     <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people
                         management as well have the technical skills needed to turn ideas into reality.</p>
                     <p>I have developed
-                        my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, Node.js, Express.js, Mysql, Mongo DB as well as the usage of
+                        my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, Node.js, Express.js, Mysql,
+                        Mongo DB as well as the usage of
                         API's. With these skills as well as the skills I aquired while getting my A.S in Computer
                         IT, I
                         am equipped to take on almost any challenge that may present itself.</p>
