added popovers to my projects

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
 
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -102,7 +103,8 @@
                         <img src="assets/images/psychic.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
-                            <a href="https://github.com/Ryby1024/Psychic-Game" target="blank"
+                            <a href="https://github.com/Ryby1024/Psychic-Game" target="blank" data-toggle="popover" title="Psychic Game"
+                            data-content="The Psychic Game helps you to practice basic Javascript and learn assigning variables, for and if statements, as well as using functions."
                                 class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/Psychic-Game/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -114,7 +116,8 @@
                         <img src="assets/images/avengers.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Avengers Defender</h5>
-                            <a href="https://github.com/Ryby1024/Unit-4-Game" target="blank"
+                            <a href="https://github.com/Ryby1024/Unit-4-Game" target="blank" data-toggle="popover" title="Avengers Defender"
+                            data-content="Avengers Defender is a numerical based game that will challenge your problem solving abilities. It is a game made using HTML5, CSS3, Bootstrap, and JQuery." 
                                 class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/Unit-4-Game/" target="blank" class="btn btn-primary">Try
                                 Me</a>
@@ -126,7 +129,8 @@
                         <img src="assets/images/bigbang.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Trivia Game</h5>
-                            <a href="https://github.com/Ryby1024/TriviaGame" target="blank"
+                            <a href="https://github.com/Ryby1024/TriviaGame" target="blank" data-toggle="popover" title="Trivia Game"
+                            data-content="This is a game to test your knowledge of the hit sitcom The Big Bang Theory. The game is made using HTML5, CSS3, Javascript, and JQuery."
                                 class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/TriviaGame/" target="blank" class="btn btn-primary">Try
                                 Me</a>
@@ -142,7 +146,8 @@
                         <img src="assets/images/giphy.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Giphy-Pull</h5>
-                            <a href="https://github.com/Ryby1024/Giphy-Pull" target="blank"
+                            <a href="https://github.com/Ryby1024/Giphy-Pull" target="blank" data-toggle="popover" title="Giphy Pull"
+                            data-content="Giphy Pull is an application built using JQuery, Bootstrap, CSS, AJAX, JSON, and the Giphy API. There are premaded buttons of athletes that you can hit and pull 10 still Gifs from the Giphy API. There is also an input area in which you can type and an athlete of your choice and also recieve their Gifs."
                                 class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/Giphy-Pull/" target="blank" class="btn btn-primary">Try
                                 Me</a>
@@ -154,7 +159,8 @@
                         <img src="assets/images/train.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Train Scheduler</h5>
-                            <a href="https://github.com/Ryby1024/Train-Scheduler" target="blank"
+                            <a href="https://github.com/Ryby1024/Train-Scheduler" target="blank" data-toggle="popover" title="Train Scheduler"
+                            data-content="This is a program that allows you to make a train and the schedule that it will follow. This program is made using HTML5, CSS3, Bootstrap, JQuery, and Firebase."
                                 class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/Train-Scheduler/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -166,7 +172,9 @@
                         <img src="assets/images/beer.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Brew Finder</h5>
-                            <a href="https://github.com/MC180G/BrewFinder" target="blank" class="btn btn-primary">Learn
+                            <a href="https://github.com/MC180G/BrewFinder" target="blank" data-toggle="popover" title="Brew Finder"
+                            data-content="Location finder for closest brewerys to current locale. It uses HTML5, Javascript, CSS3, JQuery, Bootstrap, AJAX, and the Here Maps API as well as the Open Brewery DB API. The Guardian API was also used for the carousel."
+                            class="btn btn-primary">Learn
                                 More</a>
                             <a href="https://mc180g.github.io/BrewFinder/" target="blank" class="btn btn-primary">Try
                                 Me</a>
@@ -182,7 +190,8 @@
                         <img src="assets/images/liri.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Liri Bot</h5>
-                            <a href="https://github.com/Ryby1024/liri-node-app" target="blank"
+                            <a href="https://github.com/Ryby1024/liri-node-app" target="blank" data-toggle="popover" title="Liri Bot"
+                            data-content="Liri is a command line node app that takes in user parameters and sends back the appropriate data. LIRI is similar to SIRI, except that it is Language Interpetation and Recognition Interface where as SIRI is a Speech Interpetation and Recognition Interface."
                                 class="btn btn-primary">Learn
                                 More</a>
                         </div>
@@ -193,7 +202,8 @@
                         <img src="assets/images/bamazon.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Bamazon</h5>
-                            <a href="https://github.com/Ryby1024/node-mysql" target="blank"
+                            <a href="https://github.com/Ryby1024/node-mysql" target="blank" data-toggle="popover" title="Bamazon"
+                            data-content="This app allows users to preview items for sale or purchase an item from the list of available items that are stored in a mysql database we created. There is also a manager function that allows you to keep tabs on the 'business'."
                                 class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
@@ -204,7 +214,8 @@
                         <img src="assets/images/love.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Friend Finder</h5>
-                            <a href="https://github.com/Ryby1024/Friend-Finder" target="blank"
+                            <a href="https://github.com/Ryby1024/Friend-Finder" target="blank" data-toggle="popover" title="Friend Finder"
+                            data-content="o use this app, a user must answer 10 survey questions. The answers range from 1 (Strongly Disagree) and go to 5 (Strongly Agree). Based on the responses the user gives, the app will match them with someone that most closely fits with the answers they gave."
                                 class="btn btn-primary">Learn More</a>
                             <a href="https://arcane-journey-78495.herokuapp.com/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -221,7 +232,9 @@
                         <img src="assets/images/burger.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Burger Order</h5>
-                            <a href="https://github.com/Ryby1024/burger" target="blank" class="btn btn-primary">Learn
+                            <a href="https://github.com/Ryby1024/burger" target="blank" data-toggle="popover" title="Burger Order"
+                            data-content="The Burger Order app allows you to order whatever burger you choose and then gives you the ability to devour the burger. After you devour the burger you can then delete that burger from the database."
+                             class="btn btn-primary">Learn
                                 More</a>
                             <a href="https://sleepy-spire-88994.herokuapp.com/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -235,7 +248,8 @@
                         <img src="assets/images/gift.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">UnWrapped</h5>
-                            <a href="https://github.com/sengland88/unWrapped" target="blank"
+                            <a href="https://github.com/sengland88/unWrapped" target="blank" data-toggle="popover" title="unWrapped"
+                            data-content="A party planning web application that allows users to create and rsvp to parties while also keeping track of guests, gifts and if they sent a thank you note."
                                 class="btn btn-primary">Learn More</a>
                             <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -249,7 +263,9 @@
                         <img src="assets/images/paper.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">NY Times Scraper</h5>
-                            <a href="https://github.com/Ryby1024/scraped" target="blank" class="btn btn-primary">Learn
+                            <a href="https://github.com/Ryby1024/scraped" target="blank" data-toggle="popover" title="NY Times Scraper"
+                            data-content="An app that scrapes the technology section of the New York Times. It uses HTML5, Javascript, CSS3, Materialize, JQuery, Mongoose, Mongo DB, Handlebars.js, Express.js and Node.js."
+                             class="btn btn-primary">Learn
                                 More</a>
                             <a href="https://evening-thicket-08549.herokuapp.com/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -268,7 +284,9 @@
                         <img src="assets/images/marvel.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Marvel Memory Game</h5>
-                            <a href="https://github.com/Ryby1024/Clicky-Game" target="blank" class="btn btn-primary">Learn More</a>
+                            <a href="https://github.com/Ryby1024/Clicky-Game" target="blank" data-toggle="popover" title="Marvel Memory Game"
+                            data-content="This game tests your memory as you earn points for each character you click on. Click on the same character twice though and you lose. It uses HTML5, Javascript, CSS3, React.js, JQuery, and Bootstrap4."
+                            class="btn btn-primary">Learn More</a>
                             <a href="https://ryby1024.github.io/Clicky-Game/" target="blank" class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
