added CNAME file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>        
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -88,6 +88,18 @@
             </div>
         </div>
 
+    </div>
+    <div class="container" id="technical">
+        <div id="technical-banner">
+            <h2>Technical Skills</h2>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row" id="skills">
+            
+
+            
+        </div>
     </div>
     <div class="container">
         <div id="project-banner">
@@ -324,7 +336,7 @@
                 </div>
             </div>
         </div>
-        <footer id="footer">
+        <footer id="footer" >
 
             <p><b>You can contact me by:</b></p>
             <p><b>Email:</b> myroy1024@gmail.com</p>
