added linkedin and github

--- a/index.html
+++ b/index.html
@@ -338,11 +338,13 @@
         </div>
         <footer id="footer" >
 
-            <p><b>You can contact me by:</b></p>
+            <h4><b>You can contact me by:</b></h4>
             <p><b>Email:</b> myroy1024@gmail.com</p>
-            <p><b>Email:</b> myroy1024@yahoo.com</p>
-            <p><b>Phone:</b> (407)-461-7433</p>
+            <p><b>Phone:</b> (407)-461-7433</p>            
+            <p><a href="https://github.com/Ryby1024" target="blank"><img src="assets/images/github.png"></a></p>
+            <p><a href="https://www.linkedin.com/in/roy-davis-a0457265/" target="blank"><img src="assets/images/linkedIn.png"></a></p>
             <p><b>© 2019 Copyright:</b></p>
+            
 
         </footer>
 
