changed my about me and contact sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="container">
+    
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top" id="navbar">
             <h1>Roy Davis</h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </nav>
-    </div>
+    
     <div class="container" id="carousel-pics">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -73,18 +73,9 @@
                 <img id="code" src="assets/images/code.jpg" class="img-fluid">
             </div>
             <div class="col-sm-6" data-aos="fade-left">
-                <p>Hello, my name is Roy Davis and I am an inspiring Web Developer/Software Engineer. I have worked in
-                    retail for over 20 years and have decided I want a new, rewarding career path. I have already
-                    obtained my A.S in Computer IT and I am now currently enrolled in the UCF coding bootcamp.</p>
-                <p>During my time working in retail, I have been responsible for many jobs. I have worked for Publix
-                    Supermarkets since
-                    1996. I started as a bagger while in highschool and eventually moved all the way up to a Department
-                    Manager position. I eventually realized that retail management was not in the best interest of my
-                    family or I so I decided it was time for a change.</p>
-                <p>Shortly after the birth of my third child, my wife and I decided it would be best if I pursued a
-                    college degree. It took almost 6 years, but I was finally able to earn my Associates in Computer IT
-                    in December of 2016. It was very rewarding to know that I stuck with it and was able to accomplish
-                    something I could be proud of.</p>
+                <p>Full Stack Web Developer with extensive retail experience. Graduate of the University of Central Florida Coding Boot Camp with skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, Node.js, Express.js, Mysql,
+                    Mongo DB and React.js. Degree in Computer IT from  Valencia College. My goal as a developer is to (create intuitive user experiences, developing responsive websites, create visually stunning websites).</p> <p> My background in retail has given me invaluable experience working in a team environment and putting the needs of the customer first.</p>
+                <p></p>
             </div>
         </div>
 
@@ -117,7 +108,7 @@
                             <h5 class="card-title">Psychic Game</h5>
                             <a href="https://github.com/Ryby1024/Psychic-Game" target="blank" data-toggle="popover" title="Psychic Game"
                             data-content="The Psychic Game helps you to practice basic Javascript and learn assigning variables, for and if statements, as well as using functions."
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                             <a href="https://ryby1024.github.io/Psychic-Game/" target="blank"
                                 class="btn btn-primary">Try Me</a>
                         </div>
@@ -130,7 +121,7 @@
                             <h5 class="card-title">Avengers Defender</h5>
                             <a href="https://github.com/Ryby1024/Unit-4-Game" target="blank" data-toggle="popover" title="Avengers Defender"
                             data-content="Avengers Defender is a numerical based game that will challenge your problem solving abilities. It is a game made using HTML5, CSS3, Bootstrap, and JQuery." 
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                             <a href="https://ryby1024.github.io/Unit-4-Game/" target="blank" class="btn btn-primary">Try
                                 Me</a>
                         </div>
@@ -143,7 +134,7 @@
                             <h5 class="card-title">Trivia Game</h5>
                             <a href="https://github.com/Ryby1024/TriviaGame" target="blank" data-toggle="popover" title="Trivia Game"
                             data-content="This is a game to test your knowledge of the hit sitcom The Big Bang Theory. The game is made using HTML5, CSS3, Javascript, and JQuery."
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                             <a href="https://ryby1024.github.io/TriviaGame/" target="blank" class="btn btn-primary">Try
                                 Me</a>
                         </div>
@@ -160,7 +151,7 @@
                             <h5 class="card-title">Giphy-Pull</h5>
                             <a href="https://github.com/Ryby1024/Giphy-Pull" target="blank" data-toggle="popover" title="Giphy Pull"
                             data-content="Giphy Pull is an application built using JQuery, Bootstrap, CSS, AJAX, JSON, and the Giphy API. There are premaded buttons of athletes that you can hit and pull 10 still Gifs from the Giphy API. There is also an input area in which you can type and an athlete of your choice and also recieve their Gifs."
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                             <a href="https://ryby1024.github.io/Giphy-Pull/" target="blank" class="btn btn-primary">Try
                                 Me</a>
                         </div>
@@ -173,7 +164,7 @@
                             <h5 class="card-title">Train Scheduler</h5>
                             <a href="https://github.com/Ryby1024/Train-Scheduler" target="blank" data-toggle="popover" title="Train Scheduler"
                             data-content="This is a program that allows you to make a train and the schedule that it will follow. This program is made using HTML5, CSS3, Bootstrap, JQuery, and Firebase."
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                             <a href="https://ryby1024.github.io/Train-Scheduler/" target="blank"
                                 class="btn btn-primary">Try Me</a>
                         </div>
@@ -184,9 +175,9 @@
                         <img src="assets/images/beer.jpg" class="card-img-top" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Brew Finder</h5>
-                            <a href="https://github.com/MC180G/BrewFinder" target="blank" data-toggle="popover" title="Brew Finder"
+                            <a href="https://github.com/Ryby1024/MyBrewFinder" target="blank" data-toggle="popover" title="Brew Finder"
                             data-content="Location finder for closest brewerys to current locale. It uses HTML5, Javascript, CSS3, JQuery, Bootstrap, AJAX, and the Here Maps API as well as the Open Brewery DB API. The Guardian API was also used for the carousel."
-                            class="btn btn-primary">Learn
+                            class="btn btn-primary">Click For
                                 More</a>
                             <a href="https://mc180g.github.io/BrewFinder/" target="blank" class="btn btn-primary">Try
                                 Me</a>
@@ -204,7 +195,7 @@
                             <h5 class="card-title">Liri Bot</h5>
                             <a href="https://github.com/Ryby1024/liri-node-app" target="blank" data-toggle="popover" title="Liri Bot"
                             data-content="Liri is a command line node app that takes in user parameters and sends back the appropriate data. LIRI is similar to SIRI, except that it is Language Interpetation and Recognition Interface where as SIRI is a Speech Interpetation and Recognition Interface."
-                                class="btn btn-primary">Learn
+                                class="btn btn-primary">Click For
                                 More</a>
                         </div>
                     </div>
@@ -216,7 +207,7 @@
                             <h5 class="card-title">Bamazon</h5>
                             <a href="https://github.com/Ryby1024/node-mysql" target="blank" data-toggle="popover" title="Bamazon"
                             data-content="This app allows users to preview items for sale or purchase an item from the list of available items that are stored in a mysql database we created. There is also a manager function that allows you to keep tabs on the 'business'."
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                         </div>
                     </div>
                 </div>
@@ -228,7 +219,7 @@
                             <h5 class="card-title">Friend Finder</h5>
                             <a href="https://github.com/Ryby1024/Friend-Finder" target="blank" data-toggle="popover" title="Friend Finder"
                             data-content="o use this app, a user must answer 10 survey questions. The answers range from 1 (Strongly Disagree) and go to 5 (Strongly Agree). Based on the responses the user gives, the app will match them with someone that most closely fits with the answers they gave."
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                             <a href="https://arcane-journey-78495.herokuapp.com/" target="blank"
                                 class="btn btn-primary">Try Me</a>
                         </div>
@@ -246,7 +237,7 @@
                             <h5 class="card-title">Burger Order</h5>
                             <a href="https://github.com/Ryby1024/burger" target="blank" data-toggle="popover" title="Burger Order"
                             data-content="The Burger Order app allows you to order whatever burger you choose and then gives you the ability to devour the burger. After you devour the burger you can then delete that burger from the database."
-                             class="btn btn-primary">Learn
+                             class="btn btn-primary">Click For
                                 More</a>
                             <a href="https://sleepy-spire-88994.herokuapp.com/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -262,7 +253,7 @@
                             <h5 class="card-title">UnWrapped</h5>
                             <a href="https://github.com/sengland88/unWrapped" target="blank" data-toggle="popover" title="unWrapped"
                             data-content="A party planning web application that allows users to create and rsvp to parties while also keeping track of guests, gifts and if they sent a thank you note."
-                                class="btn btn-primary">Learn More</a>
+                                class="btn btn-primary">Click For More</a>
                             <a href="https://dashboard.heroku.com/apps/unwrappedgifts" target="blank"
                                 class="btn btn-primary">Try Me</a>
                         </div>
@@ -277,7 +268,7 @@
                             <h5 class="card-title">NY Times Scraper</h5>
                             <a href="https://github.com/Ryby1024/scraped" target="blank" data-toggle="popover" title="NY Times Scraper"
                             data-content="An app that scrapes the technology section of the New York Times. It uses HTML5, Javascript, CSS3, Materialize, JQuery, Mongoose, Mongo DB, Handlebars.js, Express.js and Node.js."
-                             class="btn btn-primary">Learn
+                             class="btn btn-primary">Click For
                                 More</a>
                             <a href="https://evening-thicket-08549.herokuapp.com/" target="blank"
                                 class="btn btn-primary">Try Me</a>
@@ -298,7 +289,7 @@
                             <h5 class="card-title">Marvel Memory Game</h5>
                             <a href="https://github.com/Ryby1024/Clicky-Game" target="blank" data-toggle="popover" title="Marvel Memory Game"
                             data-content="This game tests your memory as you earn points for each character you click on. Click on the same character twice though and you lose. It uses HTML5, Javascript, CSS3, React.js, JQuery, and Bootstrap4."
-                            class="btn btn-primary">Learn More</a>
+                            class="btn btn-primary">Click For More</a>
                             <a href="https://ryby1024.github.io/Clicky-Game/" target="blank" class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
@@ -320,15 +311,9 @@
                 </div>
                 <div class="col-sm-6">
                     <h4>Let's Work Together!</h4><br>
-                    <p>A former Retail Manager turned Web and Software Developer, I am trained in project and people
-                        management as well have the technical skills needed to turn ideas into reality.</p>
-                    <p>I have developed
-                        my skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, Node.js, Express.js, Mysql,
-                        Mongo DB as well as the usage of
-                        API's. With these skills as well as the skills I aquired while getting my A.S in Computer
-                        IT, I
-                        am equipped to take on almost any challenge that may present itself.</p>
-                    <p>If you want to take a look at my resume <a
+                    <p>Web and Software Developer trained in project and people
+                        management, but also possess the technical skills needed to turn ideas into reality.</p>                    
+                    <p>To view my resume <a
                             href="https://docs.google.com/document/d/1VIelLpeTdoYC_Ma-vcAzCdBT5g7KNPKWkjwnFw80dwQ/edit?usp=sharing"
                             target="blank">click here</a>.</p>
 
