--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             <a href="https://github.com/Ryby1024/budget-app" target="blank" data-toggle="popover" title="Cash Money Budget App"
                             data-content="Full-stack application where users can create a budget, track spending, and plan for upcoming bills. To start, the user will only be allowed access to the Register or Login pages. Upon registering as a new user or logging in as an existing user, they will be able to access all of the application's pages. They will also have a personalized greeting with their first name printed to the navbar for all subsequent pages.""
                             class="btn btn-primary" >Click For More</a>
-                            <a href="https://ryby1024.github.io/Clicky-Game/" target="blank" class="btn btn-primary">Try Me</a>
+                            <a href="https://stormy-beyond-27196.herokuapp.com/" target="blank" class="btn btn-primary">Try Me</a>
                         </div>
                     </div>
                 </div>
